# celery-book

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: how_to_install_docker.md
handson_celery/: config.py  worker.py
handson_celery/tasks/task_01/: __init__.py  simple_tasks.py
handson_celery/tasks/task_02/: __init__.py  error_handling.py  execution_modes.py  task_definitions.py
handson_celery/tasks/task_03/: __init__.py  flower_long_task.py
handson_celery/tasks/task_04/: __init__.py  task_control.py
handson_celery/tasks/task_05/: __init__.py  progress_tracking.py
handson_celery/tasks/task_06/: __init__.py  task_workflows.py
handson_fastapi/: main.py  task_endpoints.py
