[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celery-fastapi-handson"
version = "0.1.0"
description = "Celery with FastAPI handson project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.0",
    "celery==5.3.6",
    "redis==5.0.1",
    "flower==2.0.1",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["handson_celery", "handson_fastapi"]
